examples/kubernetes2/provider-aws/clusters/mycluster/contour/contour-prometheus-ingress.yml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: antrea-prometheus-ingress
  namespace: monitoring
spec:
  virtualhost:
    fqdn: myprometheus.com
  routes:
    - conditions:
      - prefix: /
      services:
        - name: prometheus-service
          port: 8080
